[gd_scene load_steps=6 format=3 uid="uid://dcitdn88np37t"]

[ext_resource type="Script" uid="uid://dnr8c765bhhan" path="res://player/player_ghost.gd" id="1_xbrus"]
[ext_resource type="Texture2D" uid="uid://c8h3ljmahd3yo" path="res://player/assets/player_body_sprites.png" id="5_1x5yj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xbrus"]
radius = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xbrus"]
radius = 16.0
height = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1x5yj"]
radius = 256.0

[node name="PlayerGhost" type="StaticBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_xbrus")

[node name="StayTimer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.235732, 0.235732, 0.235732, 1)
texture_filter = 1
position = Vector2(0, -32)
texture = ExtResource("5_1x5yj")
hframes = 8
vframes = 11
region_rect = Rect2(485, 19, 421, 588)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("CircleShape2D_xbrus")

[node name="HurtArea2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea2D"]
position = Vector2(0, -16)
shape = SubResource("CapsuleShape2D_xbrus")
debug_color = Color(0.729615, 0.473607, 9.62615e-07, 0.42)

[node name="DistractionArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DistractionArea2D"]
shape = SubResource("CircleShape2D_1x5yj")

[connection signal="timeout" from="StayTimer" to="." method="_on_stay_timer_timeout"]
